@@ -6,8 +6,6 @@ Copyright (C) 2008-2009 Nikolaus Rath <Nikolaus@rath.org>
 This program can be distributed under the terms of the GNU GPLv3.
 '''
 
-
-
 from s3ql.backends import local, s3, gs, s3c, swift
 from s3ql.backends.common import (ChecksumError, ObjectNotEncrypted, NoSuchObject,
     BetterBackend)
@@ -16,7 +14,7 @@ import os
 import stat
 import tempfile
 import time
-import unittest2 as unittest
+import unittest
 
 class BackendTestsMixin(object):
 
