@@ -6,8 +6,6 @@ Copyright (C) 2008-2009 Nikolaus Rath <Nikolaus@rath.org>
 This program can be distributed under the terms of the GNU GPLv3.
 '''
 
- 
-
 from llfuse import FUSEError
 from random import randint
 from s3ql import fs
@@ -27,7 +25,7 @@ import shutil
 import stat
 import tempfile
 import time
-import unittest2 as unittest
+import unittest
 
 
 # We need to access to protected members
