@@ -6,12 +6,10 @@ Copyright (C) 2008-2009 Nikolaus Rath <Nikolaus@rath.org>
 This program can be distributed under the terms of the GNU GPLv3.
 '''
 
-
-
 import s3ql.ctrl
 import sys
 import t4_fuse
-import unittest2 as unittest
+import unittest
 
 class CtrlTests(t4_fuse.fuse_tests):
 
