@@ -6,14 +6,12 @@ Copyright (C) Nikolaus Rath <Nikolaus@rath.org>
 This program can be distributed under the terms of the GNU GPLv3.
 '''
 
-
-
 import errno
 import subprocess
 import t4_fuse
 from t4_fuse import populate_dir
 import tempfile
-import unittest2 as unittest
+import unittest
 import shutil
 
 class FullTests(t4_fuse.fuse_tests):
