@@ -2,6 +2,9 @@ UNRELEASED, S3QL tip
 
   * S3QL now requires Python 3.3 or newer.
 
+  * S3QL no longer requires the unittest2 third-party Python
+    module.
+
 2013-04-09, S3QL 1.14
 
   * Reduced CPU consumption when S3QL is idle.
